--- a/landing_page/style.css
+++ b/landing_page/style.css
@@ -72,8 +72,8 @@ nav .social a i:hover{
 }
 .hero .text{
     width: 90%;
-    margin: auto;
-    text-align: center;
+    margin: left;
+    text-align: left;
 }
 .hero .text h4{
     font-size: 40px;
