--- a/landing_page/style.css
+++ b/landing_page/style.css
@@ -154,35 +154,6 @@ nav .social .instagram a i:hover{
     background-color: transparent;
 }
 
-
-@keyframes fadeInUp {
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes fadeInDown {
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes fadeOutDown {
-    to {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-}
-
-@keyframes fadeOutUp {
-    to {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-}
-
 .content {
     padding: 100px 120px;
     background: #ff0101;
@@ -190,7 +161,6 @@ nav .social .instagram a i:hover{
     position: relative;
 
 }
-
 
 .animate-content {
     opacity: 200;
@@ -213,30 +183,55 @@ nav .social .instagram a i:hover{
     align-items: center;  
 }
 
-.front .fronttext{
+.front .text{
     width: 50%;
     margin: auto;
     text-align: center;
 }
-.front .fronttext h1{
+.front .text h1{
     opacity: 0;
     transform: translateY(20px);
     animation: fadeInUp 1s forwards 0.4s;
 }
-.front .fronttext h1 span{
+.front .text h1 span{
     color: #e30d0d;
     font-size: 90px;
     font-weight: bold;
     transform: translateY(40px);
-    animation: fadeInUp 1s forwards 0.6s;
+    animation: fadeInUp 1s forwards 0.4s;
+    animation: fade linear both;
+    animation-timeline: view();
+    animation-range: entry 50% cover 50%;
 }
-.front .fronttext p{
+@keyframes fade{
+    from{
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.front .text p{
     color: #fff;
+    animation: fadeInUp 1s forwards 0.4s;
     margin-bottom: 20px;
     opacity: 0;
     transform: translateY(40px);
-    animation: fadeInUp 2s forwards 0.6s;
+    
+    animation: fade linear both;
+    animation-timeline: view();
+    animation-range: entry 50% cover 50%;
 }
+@keyframes fade{
+    from{
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .side{
     width: 100%;
     height: 100vh;
@@ -247,31 +242,53 @@ nav .social .instagram a i:hover{
     justify-content: baseline;
     align-items: center;
 }
-.side .sidetext{
+.side .text{
     width: 60%;
     margin: auto;
     text-align: center;
 }
-.side .sidetext h1{
+.side .text h1{
     opacity: 0;
     transform: translateY(20px);
     animation: fadeInUp 2s forwards 0.4s;
 }
-.side .sidetext h1 span{
+.side .text h1 span{
     opacity: 0;
     color: #e30d0d;
     font-size: 70px;
     font-weight: bold;
     transform: translateY(30px);
-    animation: fadeInUp 1s forwards 0.6s;
+    animation: fade linear both;
+    animation-timeline: view();
+    animation-range: entry 50% cover 50%;
 }
-.side .sidetext p{
+@keyframes fade{
+    from{
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.side .text p{
     color: #fff;
     margin-bottom: 20px;
     opacity: 0;
     transform: translateY(40px);
-    animation: fadeInUp 2s forwards 0.6s;
+    animation: fade linear both;
+    animation-timeline: view();
+    animation-range: entry 50% cover 50%;
 }
+@keyframes fade{
+    from{
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .back{
     width: 100%;
     height: 100vh;
@@ -282,25 +299,35 @@ nav .social .instagram a i:hover{
     justify-content: baseline;
     align-items: center;
 }
-.back .backtext{
+.back .text{
     margin: auto;
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: flex-end;   /* Align vertically at the bottom */
-    height: 40vh;           /* Full height of the viewport */
+    justify-content: center; 
+    align-items: flex-end;   
+    height: 40vh;           
     text-align: center; 
     
 }
-.back .backtext h1{
+.back .text h1{
     opacity: 0;
     transform: translateY(30px);
     animation: fadeInUp 2s forwards 0.4s;
 }
-.back .backtext h1 span{
+.back .text h1 span{
     opacity: 0;
     color: #e30d0d;
     font-size: 70px;
     font-weight: bold;
     transform: translateY(30px);
-    animation: fadeInUp 1s forwards 0.6s;
+    animation: fade linear both;
+    animation-timeline: view();
+    animation-range: entry 50% cover 50%;
+}
+@keyframes fade{
+    from{
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
